Integrate Firebase authentication for sign in/sign out functionality via Google login

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -19,7 +19,13 @@
     justify-content: flex-end;
 
     .option {
+      appearance: none;
+      border: none;
+      background-color: transparent;
       padding: 10px 15px;
+      font-size: inherit;
+      font-family: inherit;
+      cursor: pointer;
     }
   }
 }
