--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -23,11 +23,30 @@
   }
 
   .quantity {
-    padding-left: 20px;
+    display: flex;
+
+    .arrow {
+      cursor: pointer;
+      &:hover {
+        opacity: 0.6;
+      }
+    }
+
+    .value {
+      margin: 0 10px;
+    }
   }
 
   .remove-button {
     padding-left: 12px;
     cursor: pointer;
+    transition: all .2s ease-in-out;
+    opacity: 0.6;
+
+
+    &:hover {
+      transform: scale(1.1);
+      opacity: 1;
+    }
   }
 }
