Refactor all components to use styled-components instead of SCSS; update some elements from divs to more semantically correct elements

--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -1,3 +1,8 @@
+/**
+Converted to styled-components instead of Sass.
+Styles left here for demonstration purposes, but no longer imported into the respective component.
+**/
+
 .collection-item {
   width: 22vw;
   display: flex;
