--- a/src/pages/login/login.styles.scss
+++ b/src/pages/login/login.styles.scss
@@ -1,3 +1,8 @@
+/**
+Converted to styled-components instead of Sass.
+Styles left here for demonstration purposes, but no longer imported into the respective component.
+**/
+
 .login {
   width: 850px;
   display: flex;
