--- a/src/components/cart-icon/cart-icon.styles.scss
+++ b/src/components/cart-icon/cart-icon.styles.scss
@@ -1,3 +1,8 @@
+/**
+Converted to styled-components instead of Sass.
+Styles left here for demonstration purposes, but no longer imported into the respective component.
+**/
+
 .cart-icon {
   width: 45px;
   height: 45px;
