--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -1,3 +1,8 @@
+/**
+Converted to styled-components instead of Sass.
+Styles left here for demonstration purposes, but no longer imported into the respective component.
+**/
+
 .checkout-item {
   width: 100% ;
   display: flex;
