--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -1,3 +1,8 @@
+/**
+Converted to styled-components instead of Sass.
+Styles left here for demonstration purposes, but no longer imported into the respective component.
+**/
+
 .menu-item {
   min-width: 30%;
   height: 240px;
