--- a/src/components/sign-up/sign-up.styles.scss
+++ b/src/components/sign-up/sign-up.styles.scss
@@ -1,9 +1,11 @@
+/**
+Converted to styled-components instead of Sass.
+Styles left here for demonstration purposes, but no longer imported into the respective component.
+**/
+
+
 .sign-up {
   display: flex;
   flex-direction: column;
   width: 380px;
-
-  .title {
-    margin: 10px 0;
-  }
 }
