--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -1,3 +1,8 @@
+/**
+Converted to styled-components instead of Sass.
+Styles left here for demonstration purposes, but no longer imported into the respective component.
+**/
+
 .checkout-page {
   width: 55vw;
   min-height: 90vh;
